Sat Oct 13 01:39:46 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_regexp.rb
	  (TestRegexp#test_raw_hyphen_and_type_char_after_range): added new
	  test. ref [ruby-core:47115] [Backport #6853]

Fri Oct 12 18:19:35 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_get_path_check): path name must not contain NUL bytes.

Fri Oct 12 17:51:43 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* error.c (exc_to_s, name_err_to_s, name_err_mesg_to_str): do not
	  taint messages.

Fri Oct 12 16:11:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBDIR_BASENAME): use configured libdir value to fix
	  --enable-load-relative on systems where libdir is not default value,
	  overridden in config.site files.  [ruby-core:47267] [Bug #6903]

	* ruby.c (ruby_init_loadpath_safe): ditto.

Fri Oct 12 13:56:01 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* test/rexml/test_encoding.rb:
	  Add require 'require 'rexml/document'

Fri Oct 12 13:36:32 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (flodivmod): must through the same pass if HAVE_FMOD or not.
	  this is a bugfix of r35013.

Fri Oct 12 13:28:37 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_cloexec_fcntl_dupfd): get rid of compile error on windows.
	  reported by Donovan Lampa at [ruby-core:43152] [Backport #6127],
	  based on a patch by Hiroshi Shirosaki at [ruby-core:47917].

Fri Oct 12 00:30:17 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (ioctl_narg_len, linux_iocparm_len): reinstantiate linux
	  specific narg length calculation.
	* test/ruby/test_io.rb (test_ioctl_linux2): add new test for old and
	  unstructured ioctl.

Fri Oct 12 00:30:17 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (ioctl_narg_len): don't use _IOC_SIZE macro on Linux.
	  On Linux some constants for ioctl(2) doesn't include the size of
	  its return value and 16bit value; for example FIONREAD 0x541B.
	  Moreover the manual, ioctl_list(2),  says "Note  that  the  size